# ghoststrike

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  TEST_PRODUCT_BRIEF.md  USER_MANUAL.md
scripts/: run_worker.sh  start_demo.sh
src/ada_iq/: __init__.py  agents.py  api.py  auth.py  config.py  models.py  observability.py  orchestrator.py  queue.py  seeds.py  store.py  worker.py
src/ada_iq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ada_iq/providers/: __init__.py  concept_generation.py  consumer_insights.py  evaluation.py  expansion.py  financial.py  gtm.py  market_intelligence.py  risk.py  strategy.py  synthesis.py
src/ada_iq/static/: app.css  app.js  index.html
tests/: test_alpha.py  test_auth.py  test_collaboration.py  test_consumer_insights.py  test_execution_runs.py  test_first_seven_steps.py  test_full_cycle.py  test_market_intelligence.py  test_metadata.py  test_operations.py  test_orchestrator.py  test_seeds.py  test_sqlite_store.py  test_v1_workflow.py
